[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prometheus-kc761x-ble-exporter"
version = "0.1.0"
description = "Prometheus exporter for KC761x radiation meters over BLE"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "bleak>=0.22",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
kc761x-ble-exporter = "kc761x_exporter.exporter:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

